--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <a ui-sref="home" ui-sref-active="active" class="pr-5">Home</a>
         <a ui-sref="leeme" ui-sref-active="active" class="pr-5">Leeme</a>
         <a ui-sref="contratos" ui-sref-active="active">Filter, Map & Reduce</a>
+        
     </nav>
 
 
@@ -67,6 +68,11 @@
     
     <!-- Vistas a cargar dinámicamente al navegar. -->
     <main ui-view class="container"></main>
+
+    <!-- Bootstrap-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 </body>
 </html>
