Listado de libros y click para editar.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <!-- Hojas de estilo -->
     <link type="text/css" rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <link rel="stylesheet" href="resources/css/styles.css" />
 
     <!-- AngularJS -->
@@ -37,8 +38,10 @@
     <!-- Modelo de datos -->
     <script src="model/IContratoResumen.js"></script>
     <script src="model/ILibro.js"></script>
+    
 
     <!-- Servicios -->
+    <script src="services/libros.service.js"></script>
 
     <!-- Controladores -->
     <script src="controllers/ContratosController.js"></script>
